# 3d-engine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  script.sh
src/: camera.hpp  engine.hpp  geometry.hpp  main.cpp  model.cpp  model.hpp  tgaimage.cpp  tgaimage.hpp  utils.hpp
